bundled_metadata/force-app/main/default/objects/POS_Order_Items__c/POS_Order_Items__c.object-meta.xml
<CustomObject>
    <label>POS Order Item</label>
    <nameField>
        <displayFormat>OI-{0000}</displayFormat>
        <label>POS Order Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>