bundled_metadata/force-app/main/default/objects/POS_Order_Items__c/fields/POS_Kits__c.field-meta.xml
<CustomField>
    <fullName>POS_Kits__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the POS Kit selected in the order item.</description>
    <label>POS Kit</label>
    <referenceTo>POS_Kits__c</referenceTo>
    <relationshipLabel>POS Order Items</relationshipLabel>
    <relationshipName>POS_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>