bundled_metadata/force-app/main/default/objects/POS_Order_Items__c/fields/POS_Order__c.field-meta.xml
<CustomField>
    <fullName>POS_Order__c</fullName>
    <description>Links the order item to the parent POS Order.</description>
    <label>POS Order</label>
    <referenceTo>POS_Orders__c</referenceTo>
    <relationshipLabel>POS Order Items</relationshipLabel>
    <relationshipName>POS_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>