bundled_metadata/force-app/main/default/objects/POS_Order_Items__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Stores the quantity of the selected POS Kit included in this order item.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>